--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img src="assets/img/yuyoung.png" class="profile-image" alt="">
                 <h2 class="profile-title">Go YuYoung</h2>
                 <div class="panel-menu">
-                    <li><a href="#" class="button" id="about"><i class="far fa-grin-wink"></i><span></span></a></li>
-                    <li><a href="#" class="button" id="skill"><i class="fas fa-laptop-code"></i><span></span></a></li>
-                    <li><a href="#" class="button" id="carrer"><i class="far fa-building"></i><span></span></a></li>
-                    <li><a href="#" class="button" id="project" target="_blank"><i class="fas fa-list"></i><span></span></a></li>
+                    <li><a href="about.html" class="button" id="about"><i class="far fa-grin-wink"></i><span></span></a></li>
+                    <li><a href="skill.html" class="button" id="skill"><i class="fas fa-laptop-code"></i><span></span></a></li>
+                    <li><a href="carrer.html" class="button" id="carrer"><i class="far fa-building"></i><span></span></a></li>
+                    <li><a href="project.html" class="button" id="project" target="_blank"><i class="fas fa-list"></i><span></span></a></li>
                 </div>
             </div>
         </div>
