1. about 화면 1차 커밋.

--- a/side-menu.html
+++ b/side-menu.html
@@ -12,7 +12,7 @@
            <li><a href="index.html" class="about"><i class="fas fa-home"></i>HOME</a></li>
            <li><a href="about.html" class="about"><i class="far fa-grin-wink"></i>ABOUT ME</a></li>
            <li><a href="skill.html" class="skill"><i class="fas fa-laptop-code"></i>SKILL</a></li>
-           <li><a href="carrer.html" class="carrer"><i class="far fa-building"></i>CARRER</a></li>
+           <li><a href="career.html" class="carrer"><i class="far fa-building"></i>CARRER</a></li>
            <li><a href="project.html" class="project"><i class="fas fa-list"></i>PROJECT</a></li>
        </ul>
     </div>
