--- a/about.html
+++ b/about.html
@@ -28,23 +28,66 @@
 <body>
     <div id="side"></div>
     <button class="menuBtn" onclick="side_open()"><i class="fas fa-bars"></i> Menu</button>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-xs-12 about-title">
                 <p><i class="far fa-grin-wink"></i> ABOUT ME <i class="far fa-grin-wink"></i></p>
             </div>
-            <div class="col-xs-12 about-content">
-                <div class="about-top">
-                    <div class="col-lg-4 col-sm-4 col-xs-12 about-image">
-                        <img src="assets/img/yuyoung.png" class="side-image" alt="">
+            <div class="about-content">
+                <div class="col-xs-12 about-top">
+                    <div class="col-lg-6 col-sm-6 col-xs-12 about-image">
+                        <img src="assets/img/profile.png">
                     </div>
-                    <div class="col-lg-8 col-sm-8 col-xs-12 about-name">
-                    고유영
-                    GO YU YOUNG
+                    <div class="col-lg-6 col-sm-6 col-xs-12">
+                        <div class="about-name">
+                            <p class="hangle f-30">이 름 : 고 유 영</p>
+                            <p style="font-size: 30px">GO YU YOUNG</p>    
+                        </div>
                     </div>
                 </div>
                 <div class="col-xs-12 about-mid">
-                    about-mid
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="far fa-calendar-alt"></i>
+                            <span class="hangle f-30"> 생년월일</span>
+                            <p class="f-20">1997.01.30</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="fas fa-mobile-alt"></i>
+                            <span class="hangle f-30"> 연락처</span>
+                            <p class="f-20">010-2045-6369</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="far fa-envelope"></i>
+                            <span class="hangle f-30"> 이메일</span>
+                            <p class="f-20">yooou5369@naver.com</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="fas fa-map-marked-alt"></i>
+                            <span class="hangle f-30"> 주소지</span>
+                            <p class="hangle f-20">인천광역시</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="fas fa-user-graduate"></i>
+                            <span class="hangle f-30"> 학력</span>
+                            <p class="hangle f-20">남서울 대학교 정보통신공학과</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-xs-12 out-box">
+                        <div class="in-box">
+                            <i class="fas fa-briefcase"></i>
+                            <span class="hangle f-30"> 경력</span>
+                            <p class="hangle f-20">1년 5개월</p>
+                        </div>
+                    </div>
                 </div>
             </div>    
         </div>
