--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="panel-menu">
                     <li><a href="about.html" class="button" id="about"><i class="far fa-grin-wink"></i><span></span></a></li>
                     <li><a href="skill.html" class="button" id="skill"><i class="fas fa-laptop-code"></i><span></span></a></li>
-                    <li><a href="carrer.html" class="button" id="carrer"><i class="far fa-building"></i><span></span></a></li>
+                    <li><a href="career.html" class="button" id="carrer"><i class="far fa-building"></i><span></span></a></li>
                     <li><a href="project.html" class="button" id="project" target="_blank"><i class="fas fa-list"></i><span></span></a></li>
                 </div>
             </div>
