--- a/main.html
+++ b/main.html
@@ -133,14 +133,34 @@
                             </div>
                             <div class="career-my">
                                 <ul>
-                                    <b>기록관리 시스템(반입,반출) 개발</b>
-                                    <p>2020.09 ~ 2020.10</p>
-                                    <li></li>
-                                    <b>업무관리 시스템(BMS) 개발</b>
-                                    <p>2021.04 ~ 2021.05</p>
-                                    <li></li>
-                                    <b>기록관리 시스템(도서관리) 개발</b>
-                                    <p>2021.05 ~ 2021.09</p>
+                                    <h6>업무관리 시스템(BMS) 개발</h6>
+                                    <p class="period">2021.04 ~ 2021.05</p>
+                                    <p>기록관리 체계를 기반으로 개발된 업무관리시스템으로 업무 관리뿐만 아니라 영업, 입찰, 프로젝트 관리를 하기 위한 시스템</p>
+                                    <li>상세 화면 및 팝업 Front-end 개발 진행 : 총 5개 화면 및 팝업
+                                        중복검사 기능 추가</li>
+                                    <li>상세 화면 및 팝업 Back-end 개발 진행 : 총 7개 화면 및 팝업</li>
+                                    <li>법정 근로시간 저장, 조회, 수정, 삭제 기능 개발</li>
+                                    <li>자동계산 가능 기능 개발(월 평균 주수, 월 총 근무 일수)</li>
+                                    <li>중복검사 공통함수 개발</li>
+                                    <li>프로젝트별 요구사항 목록 조회, 저장, 수정, 삭제 기능 개발(트리구조)</li>
+                                    <li>zoom을 이용한 일반 사용자 교육 진행(본부별로 진행, 1시간씩 총 2번 진행)</li>
+
+                                    <h6>기록관리 시스템(도서관리) 개발</h6>
+                                    <p class="period">2021.05 ~ 2021.09</p>
+                                    <p>기록관리 체계를 기반으로 개발된 도서관리 시스템으로 권한(사용자, 관리자)별로 화면을 구분해 자료를 관리하기 위한 시스템</p>
+                                    <li>관리자 메뉴 : 총 7개 화면 및 팝업 Front & Back-end 개발 진행</li>
+                                    <li>도서 예약신청 목록, 상세정보 팝업 조회, 예약취소 기능 개발</li>
+                                    <li>제적자 목록, 상세정보 팝업 조회, 폐기, 복구 기능 개발</li>
+                                    <li>사용자 메뉴 : 총 4개 화면 및 팝업 Front & Back-end 개발 진행</li>
+                                    <li>내서재 목록 조회, 삭제, 대출신청, 예약신청 기능 개발</li>
+                                    <li>알림내역 조회 기능 개발</li>
+                                    <li>소장 자료 목록 조회 기능 개발, 상태 알림 뱃지 추가</li>
+                                    <li>RFID 라벨 출력 기기 연결 및 작동</li>
+                                    <li>RFID 태그 위치 조정, 태그 디자인 변경</li>
+
+                                    <h6>기록관리 시스템(반입,반출) 개발</h6>
+                                    <p class="period">2021.09 ~ 2021.10</p>
+                                    <p>기록물의 반입, 반출 프로세스를 진행하고, 그에 따른 이력까지 관리하는 시스템</p>
                                     <li></li>
                                 </ul>
 
