--- a/index.html
+++ b/index.html
@@ -1,26 +1,321 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>YuYoung's Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <script>
+        $(window).scroll(function(){
+            if (!$(".navbar").hasClass("shadow")) {
+                $(".navbar").addClass("shadow");
+            }
+            if ($(this).scrollTop() == 0) {
+                $(".navbar").removeClass('shadow');
+            }
+        });
+    </script>
+
 </head>
 <body>
-    <div class="panel-main">
-        <div class="panel-content">
-            <div class="panel-content-inner hoverable">
-                <img src="assets/img/yuyoung.png" class="profile-image" alt="">
-                <h2 class="profile-title">Go YuYoung</h2>
-                <div class="panel-menu">
-                    <li><a href="about.html" class="button" id="about"><i class="far fa-grin-wink"></i><span></span></a></li>
-                    <li><a href="skill.html" class="button" id="skill"><i class="fas fa-laptop-code"></i><span></span></a></li>
-                    <li><a href="career.html" class="button" id="carrer"><i class="far fa-building"></i><span></span></a></li>
-                    <li><a href="project.html" class="button" id="project" target="_blank"><i class="fas fa-list"></i><span></span></a></li>
+    <header class="header">
+        <nav class="navbar navbar-expand-lg justify-content-center navbar-light">
+            <div class="container-fluid">
+                <img src="assets/img/logo.png">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#career">career</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skill">skill</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#project">project</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="content">
+        <div class="about" id="about">
+            <div class="container" >
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12">
+                        <img src="assets/img/good.png">
+                    </div>
+                    <div class="col-sm-6 col-xs-12 about-info">
+                        <div class="badge-div">
+                            <span class="badge bg-warning text-dark">
+                                <i class="bi bi-emoji-smile"></i> About me
+                            </span>
+                        </div>
+                        <div class="about-hi">
+                            <p>안녕하세요.</p>
+                            <p>자바 웹개발자 고유영입니다. </p>
+                        </div>
+                        <div class="about-badge">
+                            <span class="badge outline-badge text-dark">JAVA</span>
+                            <span class="badge outline-badge text-dark">JavaScript</span>
+                            <span class="badge outline-badge text-dark">jQuery</span>
+                            <span class="badge outline-badge text-dark">html</span>
+                            <span class="badge outline-badge text-dark">css</span>
+                            <span class="badge outline-badge text-dark">JSP</span>
+                            <span class="badge outline-badge text-dark">Oracle DB</span>
+                            <span class="badge outline-badge text-dark">CUBRID</span>
+                            <span class="badge outline-badge text-dark">Mongo DB</span>
+                            <span class="badge outline-badge text-dark">MySQL</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="career" id="career">
+            <div class="container" >
+                <div class="row">
+                    <div class="col-sm-4 col-xs-12">
+                        <div class="career-img">
+                            <img src="assets/img/rmsoft_logo.png">
+                        </div>
+                    </div>
+                    <div class="col-sm-8 col-xs-12 career-content">
+                        <div class="badge-div">
+                            <span class="badge bg-warning text-dark">
+                                <i class="bi bi-building"></i> Career
+                            </span>
+                        </div>
+                        <div class="career-info">
+                            <div class="career-rm">
+                                <h3>(주)알엠소프트</h3>
+                                <p>2020.08 ~ 2021.12 (1년 5개월)</p>
+                                기록관리 체계를 기반으로 시스템을 개발하여 공공기관에서 만들어지는 정보들을 기록하고 관리하는 시스템을 제공하는 기업입니다.
+                            </div>
+                            <div class="career-my">
+                                <ul>
+                                    <h6>기록관리 시스템 유지보수</h6>
+                                    <p class="period">2020.08 ~ 2021.03</p>
+                                    <p>비전자 기록물을 전자화하여 비전자 기록물을 관리하기 위한 시스템 </p>
+                                    <li>사용자, 기록관 담당자, 시스템 관리자 메뉴얼 작성</li>
+                                    <li>기록관리 시스템 설치 및 유지보수 진행</li>
+                                    <li>속도개선을 위한 쿼리 튜닝</li>
+                                    <li>RFID 라벨 출력 기기 설치 및 연결</li>
+                                    <li>RFID 태그 위치 조정, 태그 디자인 변경</li>
+
+                                    <h6>업무관리 시스템(BMS) 개발</h6>
+                                    <p class="period">2021.04 ~ 2021.05</p>
+                                    <p>기록관리 체계를 기반으로 개발된 업무관리시스템으로 업무 관리뿐만 아니라 영업, 입찰, 프로젝트 관리를 하기 위한 시스템</p>
+                                    <li>상세 화면 및 팝업 Front-end 개발 진행 : 총 5개 화면 및 팝업</li>
+                                    <li>상세 화면 및 팝업 Back-end 개발 진행 : 총 7개 화면 및 팝업</li>
+                                    <li>기본 CRUD API 개발</li>
+                                    <li>트리 구조 CRUD API 개발</li>
+                                    <li>자동계산 가능 기능 개발</li>
+                                    <li>중복검사 공통함수 개발</li>
+                                    <li>zoom을 이용한 일반 사용자 교육 진행</li>
+
+                                    <h6>기록관리 시스템(도서관리) 개발</h6>
+                                    <p class="period">2021.05 ~ 2021.10</p>
+                                    <p>기록관리 체계를 기반으로 개발된 도서관리 시스템으로 권한(사용자, 관리자)별로 화면을 구분해 자료를 관리하기 위한 시스템</p>
+                                    <li>관리자 페이지 상세화면 및 팝업 Front & Back-end 개발 진행 : 총 7개 화면 및 팝업</li>
+                                    <li>사용자 페이지 상세화면 및 팝업 Front & Back-end 개발 진행 : 총 4개 화면 및 팝</li>
+                                    <li>기본 CRUD API 개발</li>
+                                    <li>대출 현황 통계 메뉴 화면 개발</li>
+                                    <li>RFID 라벨 출력 기기 연결 및 작동</li>
+                                    <li>RFID 태그 위치 조정, 태그 디자인 변경</li>
+
+                                    <h6>기록관리 시스템(반입,반출) 개발</h6>
+                                    <p class="period">2021.09 ~ 2021.10</p>
+                                    <p>기록물의 반입, 반출 프로세스를 진행하고, 그에 따른 이력까지 관리하는 시스템</p>
+                                    <li>상세 화면 및 팝업 Front-end 개발 진행 : 총 2개 화면 및 팝업</li>
+                                    <li>상세 화면 및 팝업 Back-end 개발 진행 : 총 3개 화면 및 팝업</li>
+                                    <li>기본 CRUD API 개발</li>
+
+                                    <h6>기록관리 시스템 태블릿 App 유지보수</h6>
+                                    <p class="period">2021.11 ~ 2021.12</p>
+                                    <p>기존 기록관리 시스템과 연동하여 태블릿에서 사용할 수 있는 애플리케이션</p>
+                                    <li>전체 보유 목록 조회 기능 개발</li>
+                                    <li>목록 조회 화면에 페이징 기능 추가</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skill" id="skill">
+            <div class="container" >
+                <div class="badge-div">
+                            <span class="badge bg-warning text-dark">
+                                <i class="bi bi-code"></i> Skill
+                            </span>
+                </div>
+                <div>
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>Language</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            JAVA-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>FrontEnd</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            HTML5-->
+<!--                            CSS-->
+<!--                            JavaScript-->
+<!--                            jquery-->
+<!--                            BootStrap-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>BackEnd</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            Spring-->
+<!--                            SpringBoot-->
+<!--                            JSP/JSTL-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>DataBase</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            Oracle-->
+<!--                            CUBRID-->
+<!--                            MySQL-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>Version Control</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            Git-->
+<!--                            Github-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
+<!--                        <h4>Tool</h4>-->
+<!--                        <div class="skill-content">-->
+<!--                            Intellij-->
+<!--                            Eclipse-->
+<!--                        </div>-->
+<!--                    </div>-->
+                    <div style="float: left; border-right: 1px solid black; width: 20%;">
+                        <p>Language</p>
+                        <p>FrontEnd</p>
+                        <p>BackEnd</p>
+                        <p>DataBase</p>
+                        <p>Version Control</p>
+                        <p>Tool</p>
+                    </div>
+                    <div style="float: right; width: 80%;">
+                        <p>JAVA</p>
+                        <p>HTML5, CSS, JavaScript, jquery, BootStrap</p>
+                        <p>Spring, SpringBoot, JSP/JSTL</p>
+                        <p>Oracle, CUBRID, MySQL</p>
+                        <p>Git, Github</p>
+                        <p>Intellij, Eclipse</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="project" id="project">
+            <div class="container" >
+                <div class="row">
+                    <div class="badge-div">
+                            <span class="badge bg-warning text-dark">
+                                <i class="bi bi-list-ul"></i> Project
+                            </span>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-inner box-hover row">
+                            <div class="col-md-4 col-sm-12">
+                                <img src="assets/img/project-1.png">
+                            </div>
+                            <div class="col-md-8 col-sm-12">
+                                <ul>
+                                    <h2><b>호텔 예약 프로그램</b></h2>
+                                    <p>자바 웹 개발을 배우고 개발한 첫 프로젝트 입니다.<br>
+                                        권한별(관리자, 사용자)로 메뉴의 구성을 다르게 제공해 관리자가 추가로 내역을 관리할 수 있는 화면 등이 존재합니다.
+                                        객실, 부대시설을 등록, 수정, 삭제가 가능하고, 관리자가 추후에 객실 배정을 진행하게 됩니다.
+                                        부가적인 기능으로는 날씨 API와 Kakao 지도 API를 사용하여 현재 서울의 날씨와 호텔 위치를 지도로 표시하고 있습니다.</p>
+                                    <p><b>개발기간 :</b> 2019.12.11 ~ 2020.01.14 (약 1달)</p>
+                                    <p><b>참여 인원 :</b>4명</p>
+                                    <p><b>사용 서버 :</b>Apache Tomcat</p>
+                                    <p><b>사용 프로그램 :</b>Eclipse, Sqldeveloper, Bracket</p>
+                                    <p><b>사용 기술 :</b>Java, Spring, JavaScript, jQuery, MyBatis, CSS, HTML, Bootstrap</p>
+                                    <p><b>담당 업무 :</b></p>
+                                    <h6>[Front-end]</h6>
+                                    <li>메인 화면, 관리자 페이지</li>
+                                    <h6>[Back-end]</h6>
+                                    <li>객실 관리 (등록, 수정, 삭제)</li>
+                                    <li>부대시설 관리 (등록, 수정, 삭제)</li>
+                                    <li>예약 객실 배정</li>
+                                    <li>예약 관리 (예약 취소, 수정)</li>
+                                    <li>날씨 API, Kakao 지도 API 사용</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project-inner box-hover row">
+                            <div class="col-md-4 col-sm-12 project-img2">
+                                <img src="assets/img/project-2_1.png">
+                                <img src="assets/img/project-2_2.png">
+                            </div>
+                            <div class="col-md-8 col-sm-12">
+                                <ul>
+                                    <h2><b>게시판 프로젝트 - 개인 프로젝트</b></h2>
+                                    <p>MySQL을 이용하여 개발한 게시판 프로젝트 입니다.<br>
+                                        주요 기능으로는 게시판에 게시글을 작성 하는 기능이 있으며, 비밀글을 작성할 수 있습니다. 기본적인 기능인 회원가입, 로그인 화면이 존재합니다.
+                                        부가적인 기능으로는 로그인을 진행하면 마이페이지 메뉴가 추가되면서, 내정보 수정, 내가 작성한 게시글을 확인할 수 있습니다.</p>
+                                    <p><b>개발기간 :</b> 2022.02.10 ~ 2022.02.21 (약 2주)</p>
+                                    <p><b>참여 인원 :</b>1명</p>
+                                    <p><b>사용 서버 :</b>Apache Tomcat</p>
+                                    <p><b>사용 프로그램 :</b>Intellij, MySQLWorkbench</p>
+                                    <p><b>사용 기술 :</b>Java, JavaScript, jQuery, CSS, HTML, Bootstrap, Spring Boot, JPA, thymeleaf</p>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div  class="contact" id="contact">
+            <div class="container" >
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12 contact-info">
+                        <div class="badge-div">
+                            <span class="badge bg-warning text-dark">
+                                <i class="bi bi-emoji-laughing"></i> Contact
+                            </span>
+                        </div>
+                        <h2>Go YuYoung</h2>
+                        <h4>JAVA Developer</h4>
+                        <p><i class="bi bi-envelope-fill"></i> yooou5369@naver.com</p>
+                        <p><i class="bi bi-geo-alt-fill"></i> Incheon</p>
+                        <p><a href="https://github.com/goyuyoung" target="_blank"><i class="bi bi-github"></i> github</a></p>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 contact-img">
+                        <div class="img-div">
+                            <img src="assets/img/yuyoung.png">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
 </body>
 </html>
