1. skill 내용 수정 완료, img 경로 수정.

--- a/index.html
+++ b/index.html
@@ -159,58 +159,12 @@
         <div class="skill" id="skill">
             <div class="container" >
                 <div class="badge-div">
-                            <span class="badge bg-warning text-dark">
-                                <i class="bi bi-code"></i> Skill
-                            </span>
+                    <span class="badge bg-warning text-dark">
+                        <i class="bi bi-code"></i> Skill
+                    </span>
                 </div>
-                <div>
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>Language</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            JAVA-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>FrontEnd</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            HTML5-->
-<!--                            CSS-->
-<!--                            JavaScript-->
-<!--                            jquery-->
-<!--                            BootStrap-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>BackEnd</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            Spring-->
-<!--                            SpringBoot-->
-<!--                            JSP/JSTL-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>DataBase</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            Oracle-->
-<!--                            CUBRID-->
-<!--                            MySQL-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>Version Control</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            Git-->
-<!--                            Github-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-4 col-sm-6 col-12 skill-inner box-hover">-->
-<!--                        <h4>Tool</h4>-->
-<!--                        <div class="skill-content">-->
-<!--                            Intellij-->
-<!--                            Eclipse-->
-<!--                        </div>-->
-<!--                    </div>-->
-                    <div style="float: left; border-right: 1px solid black; width: 20%;">
+                <div class="skill-content">
+                    <div class="skill-left">
                         <p>Language</p>
                         <p>FrontEnd</p>
                         <p>BackEnd</p>
@@ -218,13 +172,13 @@
                         <p>Version Control</p>
                         <p>Tool</p>
                     </div>
-                    <div style="float: right; width: 80%;">
-                        <p>JAVA</p>
-                        <p>HTML5, CSS, JavaScript, jquery, BootStrap</p>
-                        <p>Spring, SpringBoot, JSP/JSTL</p>
-                        <p>Oracle, CUBRID, MySQL</p>
-                        <p>Git, Github</p>
-                        <p>Intellij, Eclipse</p>
+                    <div class="skill-right">
+                        <p><img src="assets/img/skill/language.png"></p>
+                        <p><img src="assets/img/skill/front-end.png"></p>
+                        <p><img src="assets/img/skill/back-end.png"></p>
+                        <p><img src="assets/img/skill/database.png"></p>
+                        <p><img src="assets/img/skill/version-control.png"></p>
+                        <p><img src="assets/img/skill/tool.png"></p>
                     </div>
                 </div>
             </div>
@@ -237,10 +191,11 @@
                                 <i class="bi bi-list-ul"></i> Project
                             </span>
                     </div>
+                    <p>* 이미지를 클릭하시면 github으로 이동합니다!</p>
                     <div class="project-content">
                         <div class="project-inner box-hover row">
                             <div class="col-md-4 col-sm-12">
-                                <img src="assets/img/project-1.png">
+                                <a href="https://github.com/goyuyoung/Project_hotel" target="_blank"><img src="assets/img/project/project-1.png"></a>
                             </div>
                             <div class="col-md-8 col-sm-12">
                                 <ul>
@@ -268,8 +223,10 @@
                         </div>
                         <div class="project-inner box-hover row">
                             <div class="col-md-4 col-sm-12 project-img2">
-                                <img src="assets/img/project-2_1.png">
-                                <img src="assets/img/project-2_2.png">
+                                <a href="https://github.com/goyuyoung/boardProject" target="_blank">
+                                    <img src="assets/img/project/project-2_1.png">
+                                    <img src="assets/img/project/project-2_2.png">
+                                </a>
                             </div>
                             <div class="col-md-8 col-sm-12">
                                 <ul>
