1. skill 업무명 변경.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </div>
                             <div class="career-my">
                                 <ul>
-                                    <h6>기록관리 시스템 유지보수</h6>
+                                    <h6>기록관리 시스템 v1.0 유지보수</h6>
                                     <p class="period">2020.08 ~ 2021.03</p>
                                     <p>비전자 기록물을 전자화하여 비전자 기록물을 관리하기 위한 시스템 </p>
                                     <li>사용자, 기록관 담당자, 시스템 관리자 메뉴얼 작성</li>
@@ -117,7 +117,7 @@
                                     <li>RFID 라벨 출력 기기 설치 및 연결</li>
                                     <li>RFID 태그 위치 조정, 태그 디자인 변경</li>
 
-                                    <h6>업무관리 시스템(BMS) 개발</h6>
+                                    <h6>업무관리 시스템 개발</h6>
                                     <p class="period">2021.04 ~ 2021.05</p>
                                     <p>기록관리 체계를 기반으로 개발된 업무관리시스템으로 업무 관리뿐만 아니라 영업, 입찰, 프로젝트 관리를 하기 위한 시스템</p>
                                     <li>상세 화면 및 팝업 Front-end 개발 진행 : 총 5개 화면 및 팝업</li>
@@ -128,8 +128,8 @@
                                     <li>중복검사 공통함수 개발</li>
                                     <li>zoom을 이용한 일반 사용자 교육 진행</li>
 
-                                    <h6>기록관리 시스템(도서관리) 개발</h6>
-                                    <p class="period">2021.05 ~ 2021.10</p>
+                                    <h6>기록관리 시스템 v2.0(도서관리) 개발</h6>
+                                    <p class="period">2021.05 ~ 2021.09</p>
                                     <p>기록관리 체계를 기반으로 개발된 도서관리 시스템으로 권한(사용자, 관리자)별로 화면을 구분해 자료를 관리하기 위한 시스템</p>
                                     <li>관리자 페이지 상세화면 및 팝업 Front & Back-end 개발 진행 : 총 7개 화면 및 팝업</li>
                                     <li>사용자 페이지 상세화면 및 팝업 Front & Back-end 개발 진행 : 총 4개 화면 및 팝</li>
@@ -138,7 +138,7 @@
                                     <li>RFID 라벨 출력 기기 연결 및 작동</li>
                                     <li>RFID 태그 위치 조정, 태그 디자인 변경</li>
 
-                                    <h6>기록관리 시스템(반입,반출) 개발</h6>
+                                    <h6>기록관리 시스템 v2.0(반입,반출) 개발</h6>
                                     <p class="period">2021.09 ~ 2021.10</p>
                                     <p>기록물의 반입, 반출 프로세스를 진행하고, 그에 따른 이력까지 관리하는 시스템</p>
                                     <li>상세 화면 및 팝업 Front-end 개발 진행 : 총 2개 화면 및 팝업</li>
