1. skill 업무명 변경.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     <li>상세 화면 및 팝업 Back-end 개발 진행 : 총 3개 화면 및 팝업</li>
                                     <li>기본 CRUD API 개발</li>
 
-                                    <h6>기록관리 시스템 태블릿 App 유지보수</h6>
+                                    <h6>기록관리 시스템 v1.0 태블릿 App 유지보수</h6>
                                     <p class="period">2021.11 ~ 2021.12</p>
                                     <p>기존 기록관리 시스템과 연동하여 태블릿에서 사용할 수 있는 애플리케이션</p>
                                     <li>전체 보유 목록 조회 기능 개발</li>
